--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,8 @@
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -14,4 +18,8 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.wireframe * {
+  outline: 1px solid red !important;
 }
