--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -15,9 +18,14 @@ body {
   overflow-x: hidden;
 }
 
+p, h1, h2, h3,
+h4, h5, h6, button, a {
+  color: white;
+}
+
 a {
-  color: inherit;
   text-decoration: none;
+  width: fit-content;
 }
 
 .wireframe * {
